--- a/style.css
+++ b/style.css
@@ -225,10 +225,10 @@ nav{
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid blue;
-    border-bottom: 16px solid blue;
-    width: 120px;
-    height: 120px;
+    border-top: 16px solid darkslategrey;
+    border-bottom: 16px solid darkslategrey;
+    width: 50px;
+    height: 50px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
